--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
 <div class='wrap pt-2 mt-2'>
   {{- $size := .Paginator.PageSize }}
   {{- $scratch := newScratch }}
-  <!-- {{- range $index, $value := (.Paginate $pages).Pages }} -->
+  {{- range $index, $value := (.Paginate $pages).Pages }}
   {{ if isset .Params "image" }}
   {{ $scratch.Set "image" .Params.image }}
   {{ else }}
@@ -20,7 +20,7 @@
   {{ $bg := (absURL (printf "images/%s" $image)) }}
   <article class='article mb-2'>
     <a href='{{ $value.Permalink }}' {{ if eq $index 0 }} class='grid-reverse' {{ end }}>
-      <div class='article_thumb' style='background-image: url({{ $bg }})'></div>
+      <div class='article_thumb' style='background-image: url("{{ $bg }}")'></div>
       <div class='article_meta {{ if eq $index 0 }} center_y {{ end }}'>
         <time class='pale'>{{ dateFormat "January 02, 2006" $value.Date }}</time>
         <h3 class='article_title'>{{ $value.Title }}</h3>
@@ -32,7 +32,7 @@
   </article>
   {{- if and (eq $index 0) (gt $size 1)  }}<div class='grid-2 article_showcase'>{{ end }}
     {{- if and (eq $index (add $size -1)) (gt $size 1) }}</div>{{ end }}
-  <!-- {{- end }} -->
+  {{- end }}
 </div>
 <a href='{{ absURL (printf "post/%s" "") }}' class='post_nav'><span class='post_next'>View Archive</span></a>
 {{ end }}
