--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,7 @@
 {{- end }}
 {{- end }}
 <div class='wrap pt-2 mt-2'>
+  <h1>Latest Posts</h1>
   {{- $size := .Paginator.PageSize }}
   {{- $scratch := newScratch }}
   {{- range $index, $value := (.Paginate $pages).Pages }}
