--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class='footer wrap pale'>
-  <p>&copy;&nbsp;<span class='year'></span>&nbsp;{{ .Site.Title }}</p>
+  <p>&copy;&nbsp;<span class='year'></span>&nbsp;{{ printf "House of Moths" }}</p>
   <!-- <p>{{ i18n "designed_by" .Site.Data.designer | safeHTML }}</p> -->
 </footer>
 {{ $scriptPath := "js/index.js" }}
