Change archive to paginate

--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -135,6 +135,8 @@
   &_thumbnail {
     width: 100%;
     margin: 0;
+    max-height: 500px;
+    object-fit: cover;
   }
   &_nav {
     padding: 3rem 1.5rem;
