--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -13,14 +13,16 @@
     }
   }
   h2,h3,h4{
-    margin: 0.5rem auto;
+    // margin: 0.5rem auto;
+    margin-bottom: -0.5rem;
+    padding-bottom: 0px;
     text-align:left;
-    padding:5px 0 0 0;
+    // padding:5px 0 0 0;
   }
   p{
     padding-bottom: 0.5rem;
     padding-top: 0.5rem;
-    font-size: 1.05rem;
+    font-size: 1.15rem;
   }
   &s{
     display:flex;
@@ -53,8 +55,8 @@
       margin-bottom: 2rem;
       box-shadow: 0 1.5rem 1rem -1rem rgba(0,0,0,0.25);
       ~ h1, ~ h2, ~ h3, ~ h4 {
-        margin-top: 0;
-        padding-top: 0;
+        // margin-top: 0;
+        // padding-top: 0;
       } 
     }
   }
@@ -124,7 +126,13 @@
     border-radius: 5px;
   }
   &_title{
-    margin:5px 0;;
+    margin: 10px 0;
+    line-height: 34px;
+  }
+  &_author{
+    margin: -10px 0px 10px 0px;
+    top: -10px;
+    font-size: 20px;
   }
   &_time {
     background: var(--theme);
