--- a/layouts/partials/favicon.html
+++ b/layouts/partials/favicon.html
@@ -1,6 +1,7 @@
-<link rel='apple-touch-icon' sizes='180x180' href='{{ absURL "images/icons/apple-touch-icon.png" }}'>
-<link rel='icon' type='image/png' sizes='32x32' href='{{ absURL "images/icons/favicon-32x32.png" }}'>
-<link rel='icon' type='image/png' sizes='16x16' href='{{ absURL "images/icons/favicon-16x16.png" }}'>
-<link rel='manifest' href='{{ absURL "images/icons/site.webmanifest" }}'>
+<!-- <link rel='apple-touch-icon' sizes='180x180' href='{{ absURL "images/icons/apple-touch-icon.png" }}'> -->
+<!-- <link rel='icon' type='image/png' sizes='32x32' href='{{ absURL "images/icons/favicon-32x32.png" }}'> -->
+<!-- <link rel='icon' type='image/png' sizes='16x16' href='{{ absURL "images/icons/favicon-16x16.png" }}'> -->
+<!-- <link rel='manifest' href='{{ absURL "images/icons/site.webmanifest" }}'> -->
+<link rel="icon" type="image/png" href='{{ absURL "images/logo/moth.png" }}'>
 <meta name='msapplication-TileColor' content='#da532c'>
 <meta name='theme-color' content='#ffffff'>
