Add logo to top of main page

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -98,6 +98,12 @@ img {
   margin:15px auto;
   padding:0;
 }
+#mothzine-logo {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+}
 main{
   padding-bottom: 25px;
   flex: 1;
