--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,3 +7,6 @@
     </div> -->
   <!-- </nav> -->
 </header>
+<div id="mothzine-logo">
+  <img src="{{ absURL "images/logo/mothzine.png" }}">
+</div>
