Fix logo and add insta link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,7 @@
 <footer class='footer wrap pale'>
   <p>&copy;&nbsp;<span class='year'></span>&nbsp;{{ printf "House of Moths" }}</p>
   <!-- <p>{{ i18n "designed_by" .Site.Data.designer | safeHTML }}</p> -->
+  <p>Follow us on <a href="https://www.instagram.com/mothzine/">Instagram</a></p>
 </footer>
 {{ $scriptPath := "js/index.js" }}
 {{ $scripts := resources.Get $scriptPath | resources.ExecuteAsTemplate $scriptPath . | resources.Minify | resources.Fingerprint "sha512" }}
