--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,8 @@
     </div> -->
   <!-- </nav> -->
 </header>
+{{- if .IsHome }}
 <div id="mothzine-logo">
   <img src="{{ absURL "images/logo/mothzine.png" }}">
 </div>
+{{ end }}
