--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -202,6 +202,7 @@
     color:var(--theme);
     opacity: 0.8;
     transition: opacity 0.3s ease-in-out;
+    font-weight: bold;
     &:hover {
       text-decoration: underline;
       opacity: 1;
