--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -9,7 +9,7 @@
   --text: var(--dark);
   --title: var(--dark);
   --font: 'Metropolis', sans-serif;
-  --theme: #04a763;
+  --theme: #ae186c;
   --ease: cubic-bezier(.19,1,.22,1);
 
   @mixin darkmode {
