--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -133,6 +133,7 @@
     margin: -10px 0px 10px 0px;
     top: -10px;
     font-size: 20px;
+    text-transform: none;
   }
   &_time {
     background: var(--theme);
