Add brownies article

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,6 +19,7 @@
   {{ end }}
   {{ $image := $scratch.Get "image" }}
   {{ $bg := (absURL (printf "images/%s" $image)) }}
+  <!-- {{ if isset .Params "date" }} -->
   <article class='article mb-2'>
     <a href='{{ $value.Permalink }}' {{ if eq $index 0 }} class='grid-reverse' {{ end }}>
       <div class='article_thumb' style='background-image: url("{{ $bg }}")'></div>
@@ -31,6 +32,7 @@
       </div>
     </a>
   </article>
+  <!-- {{ end }} -->
   {{- if and (eq $index 0) (gt $size 1)  }}<div class='grid-2 article_showcase'>{{ end }}
     {{- if and (eq $index (add $size -1)) (gt $size 1) }}</div>{{ end }}
   {{- end }}
