--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -5,6 +5,7 @@
     max-width: 840px !important;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 0.5rem;
   }
   img:not(.icon) {
     @media screen and (min-width: 1025px) {
