--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
 <div class='wrap mt post'>
   <div>
+    {{ if .Params.date }}
     {{- $date := (dateFormat "02. January 2006" .Date) -}}
     <p class='post_date pale'>{{ $date }}</p>
+    {{ end }}
     <h1 class='post_title'>{{ .Title }}</h1>
     <h1 class='post_author'>{{ .Params.author }}</h1>
     <div class='post_body'>
