--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -189,7 +189,7 @@
 .pager {
   display: grid;
   grid-template-columns: 2.5rem 1fr 2.5rem;
-  margin: 2rem auto 0;
+  margin: 0 auto 2rem;
   max-width: 12.5rem;
   &, &_item {
     justify-content: center;
