--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -203,7 +203,7 @@
   }
   a {
     color:var(--theme);
-    opacity: 0.8;
+    // opacity: 0.8;
     transition: opacity 0.3s ease-in-out;
     font-weight: bold;
     &:hover {
