--- a/assets/scss/_posts.scss
+++ b/assets/scss/_posts.scss
@@ -9,7 +9,7 @@
   }
   img:not(.icon) {
     @media screen and (min-width: 1025px) {
-      width: 100vw;
+      // width: 100vw;
       max-width: 1024px;
     }
   }
