--- a/layouts/partials/pager.html
+++ b/layouts/partials/pager.html
@@ -2,19 +2,19 @@
 {{- $pages := $paginator.TotalPages -}}
 {{- $root := .Site.BaseURL -}}
 {{- if gt $pages 1 }}
-  <div class = 'pager'>
-    {{ if $paginator.HasPrev }}
-      <a href = '{{ $root }}{{ $paginator.Prev.URL }}'  class = ' pager_item pager_prev'></a>
-    {{ else }}
-      <span class = ' pager_item pager_active pager_prev'></span>
-    {{- end }}
+<div class='pager'>
+  {{ if $paginator.HasPrev }}
+  <a href='{{ $paginator.Prev.URL }}' class=' pager_item pager_prev'></a>
+  {{ else }}
+  <span class=' pager_item pager_active pager_prev'></span>
+  {{- end }}
 
-    <span>{{ $paginator.PageNumber }} of {{ $pages }}</span>
+  <span>{{ $paginator.PageNumber }} of {{ $pages }}</span>
 
-    {{- if $paginator.HasNext -}}
-      <a href = '{{ $root }}{{ $paginator.Next.URL }}' class = ' pager_item pager_next'></a>
-    {{ else -}}
-      <span class = ' pager_item pager_active pager_next'></span>
-    {{ end }}
-  </div>
+  {{- if $paginator.HasNext -}}
+  <a href='{{ $paginator.Next.URL }}' class=' pager_item pager_next'></a>
+  {{ else -}}
+  <span class=' pager_item pager_active pager_next'></span>
+  {{ end }}
+</div>
 {{- end }}
