--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,7 +8,9 @@
   --bg: #f0e3ad;
   --text: var(--dark);
   --title: var(--dark);
-  --font: 'Metropolis', sans-serif;
+  --font: 'Source Serif Pro', serif;
+  --title-font: 'Yeseva One', serif;
+  --date-font: 'Metropolis', sans-serif;
   --theme: #ae186c;
   --ease: cubic-bezier(.19,1,.22,1);
 
