--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,8 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <!-- {{- partial "analytics" . }} -->
   <!-- {{- partial "opengraph" . }} -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yeseva+One">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
   {{- partial "favicon" . }}
   <link rel='canonical' href='{{ .Permalink }}'>
   {{- $options := (dict "targetPath" "css/main.css" "outputStyle" "expanded" "enableSourceMap" "true") -}}
