--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -12,7 +12,8 @@
       opacity: 0;
     }
     transition: height 0.5s, opacity 0.5s;
-    font-size: 16px;
+    font-size: 17px;
+    font-family: var(--font);
   }
   &_excerpt,
   &_meta {
@@ -191,7 +192,7 @@
   color: var(--text);
   margin:0;
   width:100%;
-  font-size: 1.05rem;
+  font-size: 1.15rem;
   min-height:50px;
   display: flex;
   justify-content: space-between;
