--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 {{- end }}
 {{- end }}
 <div class='wrap pt-2 mt-2'>
-  <h1>Latest Posts</h1>
+  <h1 class="title">Latest Posts</h1>
   {{- $size := .Paginator.PageSize }}
   {{- $scratch := newScratch }}
   {{- range $index, $value := (.Paginate $pages).Pages }}
@@ -24,7 +24,7 @@
     <a href='{{ $value.Permalink }}' {{ if eq $index 0 }} class='grid-reverse' {{ end }}>
       <div class='article_thumb' style='background-image: url("{{ $bg }}")'></div>
       <div class='article_meta {{ if eq $index 0 }} center_y {{ end }}'>
-        <time class='title pale'>{{ dateFormat "January 02, 2006" $value.Date }}</time>
+        <time class='date title pale'>{{ dateFormat "January 02, 2006" $value.Date }}</time>
         <h3 class='title article_title'>{{ $value.Title }}</h3>
         <div class='title article_excerpt {{ if eq $index 0 }} visible {{ end }}'>
           <p>{{ $value.Summary | truncate 100 }}</p>
