--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -26,7 +26,18 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#salt-lamp {
+  position: fixed;
+  // display: block;
+  width: 500px;
+  right: 0px;
+  bottom: -100px;
+  z-index: -1;
+  object-fit: fill;
+  @media screen and (max-width:1140px) {
+    display: none;
+  }
+}
 a{
   text-decoration: none;
   color:inherit;
