--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,9 @@
   <!-- <p>{{ i18n "designed_by" .Site.Data.designer | safeHTML }}</p> -->
   <p>Follow us on <a href="https://www.instagram.com/mothzine/">Instagram</a></p>
 </footer>
+<div id="salt-lamp">
+  <img src="images/lamp.png">
+</div>
 {{ $scriptPath := "js/index.js" }}
 {{ $scripts := resources.Get $scriptPath | resources.ExecuteAsTemplate $scriptPath . | resources.Minify | resources.Fingerprint "sha512" }}
 <script src='{{ $scripts.Permalink }}'></script>
