Add the lil moth

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,4 +11,7 @@
 <div id="mothzine-logo">
   <img src="{{ absURL "images/logo/mothzine.png" }}">
 </div>
+<div id="lil-moth">
+  <img src="images/lil-moth.png">
+</div>
 {{ end }}
