--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -38,6 +38,20 @@ body{
     display: none;
   }
 }
+#lil-moth {
+  position: fixed;
+  width: 200px;
+  left: 0px;
+  top: 0px;
+  transform: rotate(140deg);
+  z-index: 5;
+  @media screen and (max-width:1140px) {
+    width: 150px;
+  }
+  @media screen and (max-width:667px) {
+    width: 70px;
+  }
+}
 a{
   text-decoration: none;
   color:inherit;
