--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
   {{- end }} -->
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <!-- {{- partial "analytics" . }} -->
+  {{- partial "analytics" . }}
   <!-- {{- partial "opengraph" . }} -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yeseva+One">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
