--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -116,6 +116,7 @@
   text-align: center;
   cursor: pointer;
   border-radius: 0.25rem;
+  font-family: var(--date-font);
 }
 .transparent{
   padding:25px;
