--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,9 +26,13 @@
       <div class='article_meta {{ if eq $index 0 }} center_y {{ end }}'>
         <time class='date title pale'>{{ dateFormat "January 02, 2006" $value.Date }}</time>
         <h3 class='title article_title'>{{ $value.Title }}</h3>
-        <div class='title article_excerpt {{ if eq $index 0 }} visible {{ end }}'>
+        {{ if eq $index 0 }}
+
+        {{ else }}
+        <div class='title article_excerpt'>
           <p>{{ $value.Summary | truncate 100 }}</p>
         </div>
+        {{ end }}
       </div>
     </a>
   </article>
