Add picklong article

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,4 +43,7 @@
 </div>
 {{- partial "pager" . }}
 <!-- <a href='{{ absURL (printf "post/%s" "") }}' class='post_nav'><span class='post_next'>Older posts</span></a> -->
+<!-- <div class='wrap pt-2 mt-2'>
+  <h1 style="font-family: var(--title-font);">Art Corner</h1>
+</div> -->
 {{ end }}
