Fix images on page 2

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
 </footer>
 {{- if .IsHome }}
 <div id="salt-lamp">
-  <img src="images/lamp.png">
+  <img src="{{ absURL "images/lamp.png" }}">
 </div>
 {{ end }}
 {{ $scriptPath := "js/index.js" }}
