--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -130,8 +130,15 @@ img {
 #mothzine-logo {
   margin: auto;
   width: 50%;
+  max-height: 75vh;
   padding: 10px;
   text-align: center;
+}
+#bin {
+  height: 100%;
+  max-height: 100%;
+  margin: auto;
+  width: auto;
 }
 main{
   // padding-bottom: 25px;
