--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
 {{- end }}
 <div class='wrap pt-2 mt-2'>
   <h1 style="font-family: var(--title-font);">Latest Posts</h1>
+  <!-- <h1 style="font-family: var(--title-font);">{{ .Paginator.URL }}</h1> -->
   {{- $size := .Paginator.PageSize }}
   {{- $scratch := newScratch }}
   {{- range $index, $value := (.Paginate $pages).Pages }}
