--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,10 +8,16 @@
   <!-- </nav> -->
 </header>
 {{- if .IsHome }}
+{{ if ne "/page/2/" .Paginator.URL }}
 <div id="mothzine-logo">
   <img src="{{ absURL "images/logo/mothzine.png" }}">
 </div>
+{{ else }}
+<div id="mothzine-logo">
+  <img id="bin" src="{{ absURL "images/binnn.png" }}">
+</div>
+{{ end }}
 <div id="lil-moth">
-  <img src="images/lil-moth.png">
+  <img src="{{ absURL "images/lil-moth.png" }}">
 </div>
 {{ end }}
