--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -135,9 +135,7 @@ img {
   text-align: center;
 }
 #bin {
-  height: 100%;
-  max-height: 100%;
-  margin: auto;
+  max-height: 70vh;
   width: auto;
 }
 main{
